# discord_discourse

./: Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: multi-publish.yml  publish.yml
